manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: modern-python-app-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
